<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>br.pro.software</groupId>
	<artifactId>eleicoes2020</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>eleicoes2020</name>
	<description>Projeto Eleições v2020</description>

	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
    		<groupId>com.itextpdf</groupId>
    		<artifactId>itextpdf</artifactId>
    		<version>5.5.13.3</version>
		</dependency>
		<!-- <dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency> -->
		<dependency>
   			<groupId>org.postgresql</groupId>
      		<artifactId>postgresql</artifactId>
    	</dependency>
		<dependency>
    		<groupId>com.sendgrid</groupId>
    		<artifactId>sendgrid-java</artifactId>
    		<!-- <version>4.6.1</version>  -->
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
    		<groupId>com.konghq</groupId>
    		<artifactId>unirest-java</artifactId>
    		<version>3.14.1</version>
		</dependency>
<!-- 	<dependency>
  		<groupId>com.google.code.gson</groupId>
  		<artifactId>gson</artifactId>
  		<version>2.8.6</version>
		</dependency> -->
		<dependency>
		    <groupId>com.vladmihalcea</groupId>
		    <artifactId>hibernate-types-55</artifactId>
		    <version>2.20.0</version>
		</dependency>
		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
                	<mainClass>br.pro.software.eleicoes2020.Eleicoes2020Application</mainClass>
            	</configuration>
			</plugin>
		</plugins>
	</build>

</project>
